--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.17</version>
+        <version>3.1.5</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -23,6 +23,11 @@
             <email>mertkaya2455@gmail.com</email>
             <organization>Micro-Devs</organization>
         </developer>
+        <developer>
+            <name>Gurkan UCAR</name>
+            <email>job@gurkanucar.com</email>
+            <organization>Micro-Devs</organization>
+        </developer>
     </developers>
 
     <properties>
@@ -30,12 +35,25 @@
         <spring-cloud.version>2021.0.8</spring-cloud.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <postgresql.version>42.5.4</postgresql.version>
-        <querydsl.version>5.0.0</querydsl.version>
         <lombok.version>1.18.20</lombok.version>
         <openapi.version>1.6.12</openapi.version>
     </properties>
 
     <dependencies>
+
+        <!-- Security: to add security (authentication and authorization) to your application -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- JSON Web Token (JWT) support -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -46,11 +64,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.microdevs</groupId>
-            <artifactId>base-service</artifactId>
-            <version>1.0.7</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.microdevs</groupId>-->
+<!--            <artifactId>base-service</artifactId>-->
+<!--            <version>1.0.7</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -81,10 +99,10 @@
         </dependency>
 
         <!--        db migration-->
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.flywaydb</groupId>-->
+        <!--            <artifactId>flyway-core</artifactId>-->
+        <!--        </dependency>-->
 
 
         <!--        validation-->
@@ -92,19 +110,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
-        <!--        queryDsl-->
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-apt</artifactId>
-            <version>${querydsl.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.querydsl</groupId>
-            <artifactId>querydsl-jpa</artifactId>
-            <version>${querydsl.version}</version>
-        </dependency>
-
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -137,6 +142,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- Spring Security test utilities -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <dependencyManagement>
@@ -191,22 +205,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>com.mysema.maven</groupId>
-                <artifactId>apt-maven-plugin</artifactId>
-                <version>1.1.3</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>process</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>target/generated-sources/java</outputDirectory>
-                            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
